sfa_dash/static/css/styles.css
/* ... */
th.selection-column{
    width: 2em;
}
.nav-tabs .nav-item.active{
    background-color: #fff;
    border: 1px solid #dee2e6;
    border-bottom: 1px solid #FFF;
}
.nav-tabs .nav-item{
    background-color: #e9ecef;
}
.nav-tabs .nav-link:hover{
    background-color: #c9cccf;
    border-color: #a9acaf;
}
#download-form{
    display: inline-block;
}
/* report stuff */


#report-block h1, #report-block h2, #report-block h3{
    margin-top: 2rem;
    margin-bottom: .5rem;
}
#metric-plot-wrapper{
    border-bottom: 1px solid #dee2e6;
    padding-bottom: 1em;
    margin-bottom: 1em;
}

#metrics-sort-list{
    list-style: none;
    padding-left: 0;
}

#metrics-sort-list .metric-sort:nth-child(2){
    padding-left: 1em;
}

#metrics-sort-list .metric-sort:nth-child(3){
    padding-left: 2em;
}

.metric-sort{
    margin: .75em;
    width: fit-content;
}
.metric-sort-value{
    padding: .5rem 1rem;
    background-color: #ddd;
    margin: 0 .1rem;
}
.metric-sort .arrow-up{
    height: 50%;
    margin: 0 .25em;
    display: inline-block;
    border-bottom: .5em solid black;
    border-left: .5em solid transparent;
    border-right: .5em solid transparent;
    border-top: unset;
}
.metric-sort .arrow-down{
    height: 50%;
    margin: 0 .25em;
    display: inline-block;
    border-bottom: unset;
    border-left: .5em solid transparent;
    border-right: .5em solid transparent;
    border-top: .5em solid black;
}

#metric-sorting{
    margin-bottom: 1em;
}

#metric-plot-wrapper > div > div{
    padding-left: 2em;
}

.report-plot-section-heading{
    background-color: #ACD;
    display: block;
    padding: .5em;
    position: relative;
    margin-bottom: .2em;
}
.report-plot-section-heading-text{
    padding-left: 1.5em;
    margin-bottom: 0;
}
.report-plot-section-heading::after{
    content: "";
    width: 1em;
    height: 1em;
    position: absolute;
    left: 1em;
    top: 30%;
    border-left: .5em solid transparent;
    border-right: .5em solid transparent;
    border-top: .5em solid black;
    border-bottom: unset;
}
.report-plot-section-heading.collapsed::after{
    border-left: .5em solid black;
    border-right: unset;
    border-bottom: .5em solid transparent;
    border-top: .5em solid transparent;
}
.ui-sortable-handle:hover{
    cursor: pointer;
}
.plot-attribute-wrapper .plot-attribute-wrapper{
    border-left: 1px solid #eee;
}

#report-block #observations-and-forecasts + p + table td:nth-of-type(2n){
    border-right: 1px solid #dee2e6;
}

#report-block #observations-and-forecasts + p + table td:last-child{
    border-right: none;
}

.datetime-td{
    word-break: break-word;
}

table.obsfx-table td{
    font-size: .75rem;
}
.plot-attribute-wrapper .plot-attribute-wrapper.loading-plots::after{
    animation: 1.5s linear infinite spinner;
    animation-play-state: inherit;
    border: solid 5px #DDD;
    border-bottom-color: #8AB;
    border-radius: 50%;
    content: "";
    height: 40px;
    position: absolute;
    margin-bottom: 20px;
    top: 20px;
    left: 50%;
    transform: translate3d(-50%, -50%, 0);
    width: 40px;
    will-change: transform;
}
@keyframes spinner {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

#form-errors .alert{
    list-style: none;
}
.warning-message{
    font-weight: bold;
    color: #A11;
}

ul.report-menu{
    list-style: none;
    padding: 0;
    background-color: ;
    border-bottom: 1px solid #dee2e6;
}
ul.report-menu li{
    display: inline-block;
    padding: .5em;
}

li.report-menu-item.report-menu-label{
    font-weight: bold;
}

li.report-menu-item.active{
    border-color: #dee2e6 #dee2e6 #fff #dee2e6;
    border-style: solid;
    border-width: 1px;
    background-color: #fff;
    margin-bottom: -1px;
}

li.report-menu-item.active a{
    color: #333;
}
input#custom-deadband{
    width: 5rem;
}
.report-metadata-popup{
    z-index: 1050;
    position: absolute;
    background-color: white;
    left: 0;
    border: 1px solid black;
    width: 100%;
    border-radius: .5em;
    padding: .5em;
}
div.report-details-expander{
    width: fit-content;
    text-align: center;
}
div.report-details-expander:hover{
    cursor: pointer;
}
a.report-details-closer{
    position: absolute;
    top: .5em;
    right: 1em;
    color: #A00!important;
}
.report-metadata-popup ul.data-metadata-fields {
    padding-left: .5em;
}
.reports-table-row:nth-child(n+3) {
    width: fit-content;
}
div.report-header{
    padding-bottom: .5rem;
    margin-bottom: 1rem;
    border-bottom: 1px solid #dee2e6;
}
.extra-params-wrapper pre{
    background-color: #EEE;
    border: 1px solid #AAA;
    padding: .5em;
}
.error-band-container, .cost-definition{
    border: 1px solid #dee2e6;
    padding: .5em;
    position: relative;
}
.primary-cost-container label {
    padding: 0 5px;
}
.primary-cost-container a[role=button]{
    margin: .25em 0;
}
.primary-cost-container a[role=button].help-button{
  margin-left: .25em;
}
.account-menu{
    width: 300px;
    left: calc(-300px + 100%);
}
a#ref-clear{
  color: #007bff;
}

